<resources>
    <!-- Main Activity -->
    <string name="app_name" translatable="false">MineSweeper</string>
    <string name="button_mode_uncover">Uncover Mode</string>
    <string name="button_mode_marking">Marking Mode</string>
    <string name="button_reset">Reset the Grid</string>
    <string name="button_ai_enabled">AI enabled</string>
    <string name="button_ai_disabled">AI disabled</string>
    <string name="text_total_mines">Total of mines: %d</string>
    <string name="text_marked_mines">Number of marked mines: %d</string>
    <string name="defeat_text">Game Lost.</string>
    <string name="victory_text">Victory!</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="languages_header">Languages</string>
    <string name="languages_title">Display language</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_text">
        "MineSweeper app by Matiboux.\n"
        "http://matiboux.me/\n\n"

        "Project assignment at Griffith College for the Mobile Development module.\n"
        "https://gcd.ie/"
    </string>

</resources>